# ComfyUI-Sharpfin

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  README_GIT_SUBMODULE.md  __init__.py  pyproject.toml  requirements-dev.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml  build.yml  publish_node.yml  validate.yml
src/: nodes.py
src/lib/: README.md
src/lib/sharpfin/: cms.py  dataloader.py  functional.py  transforms.py  util.py
src/sharpfin/: nodes.py
tests/: __init__.py  conftest.py  pytest.ini  test_nodes.py  test_sharpfin.py
