[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-sharpfin"
version = "2.0.1"
description = "ComfyUI node to use advanced Torchvision transforms built for accuracy, visual quality, and speed."
authors = [
    { name = "ComfyUI-Sharpfin", email = "git@grgr.dev" }
]
readme = "README.md"
license = { text = "Apache Software License 2.0" }
requires-python = ">=3.11"
classifiers = []
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "msgspec>=0.18.0",
    "tqdm>=4.66.0",
]


[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage", # testing
    "mypy", # linting
    "pre-commit", # runs linting on commit
    "pytest", # testing
    "ruff", # linting
]

[project.urls]
Repository = "https://github.com/tarcon/ComfyUI-Sharpfin"
BugTracker = "https://github.com/tarcon/ComfyUI-Sharpfin/issues"
Documentation = "https://github.com/tarcon/ComfyUI-Sharpfin/wiki"


[tool.comfy]
PublisherId = "tarcon"
DisplayName = "ComfyUI Sharpfin"
Icon = ""
Tags = ["comfyui"]
Repository = "https://github.com/tarcon/ComfyUI-Sharpfin"

includes = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
extend-exclude = ["src/lib"]
line-length = 140
src = ["src", "tests"]
target-version = "py311"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102", # exec-builtin
    "S307", # eval-used
    "W293",
    "F", # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
